dashboard panel cards completed

--- a/index.html
+++ b/index.html
@@ -80,6 +80,49 @@
 				<img src="./img/1.png" alt="profile source: https://unsplash.com/photos/AJIqZDAUD7A">
 			</div>
 		</nav>
+
+		<!-- dashboard -->
+		<h3 class="panel__title">
+			dashboard
+		</h3>
+
+		<div class="panel__values">
+			<!-- 1 -->
+			<div class="panel__value">
+				<i class="fa-solid fa-users"></i>
+				<div>
+					<h3>12847</h3>
+					<span>New Users</span>
+				</div>
+			</div>
+
+			<!-- 2 -->
+			<div class="panel__value">
+				<i class="fa-solid fa-cart-shopping"></i>
+				<div>
+					<h3>175.783</h3>
+					<span>Total Orders</span>
+				</div>
+			</div>
+
+			<!-- 3 -->
+			<div class="panel__value">
+				<i class="fa-solid fa-globe"></i>
+				<div>
+					<h3>243.517</h3>
+					<span>Products Sell</span>
+				</div>
+			</div>
+
+			<!-- 3 -->
+			<div class="panel__value">
+				<i class="fa-solid fa-dollar-sign"></i>
+				<div>
+					<h3>$724.973</h3>
+					<span>This Month</span>
+				</div>
+			</div>
+		</div>
 	</section>
 	<!-- end of panel -->
 
