--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<!-- panel nav right side -->
 			<div class="panel__profile">
 				<i class="fa-regular fa-bell"></i>
-				<img src="./img/1.png" alt="profile source: https://unsplash.com/photos/AJIqZDAUD7A">
+				<img src="./img/1.png" alt="profile -source: https://unsplash.com/photos/AJIqZDAUD7A">
 			</div>
 		</nav>
 
@@ -122,6 +122,184 @@
 					<span>This Month</span>
 				</div>
 			</div>
+		</div>
+
+		<!-- board -->
+		<div class="panel__board">
+			<table width="100%">
+				<thead>
+					<tr>
+						<td>Name</td>
+						<td>Title</td>
+						<td>Status</td>
+						<td>Role</td>
+						<td></td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td class="panel__people">
+							<img src="./img/1.png" alt="people -source: https://unsplash.com/photos/AJIqZDAUD7A">
+							<div class="panel__desc">
+								<h5>Sarah Doe</h5>
+								<p>sarah@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>Web Developer</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="panel__people">
+							<img src="./img/2.jpg" alt="people -source: https://unsplash.com/photos/7YVZYZeITc8">
+							<div class="panel__desc">
+								<h5>Tolgahan Doe</h5>
+								<p>tolgahan@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>ReactJS Developer</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="panel__people">
+							<img src="./img/3.jpg" alt="people -source: https://unsplash.com/photos/TACdQo62To0">
+							<div class="panel__desc">
+								<h5>Angela Doe</h5>
+								<p>angela@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>Data Visualization</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+
+					<tr>
+						<td class="panel__people">
+							<img src="./img/4.jpg" alt="people -source: https://unsplash.com/photos/sibVwORYqs0">
+							<div class="panel__desc">
+								<h5>Jonathan Doe</h5>
+								<p>jonathan@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>Backend Developer</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+
+					<tr>
+						<td class="panel__people">
+							<img src="./img/5.jpg" alt="people -source: https://unsplash.com/photos/W7b3eDUb_2I">
+							<div class="panel__desc">
+								<h5>Meghan Doe</h5>
+								<p>meghan@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>Fullstack Web Developer</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+
+					<tr>
+						<td class="panel__people">
+							<img src="./img/6.jpg" alt="people -source: https://unsplash.com/photos/-zqoE7jnQgw">
+							<div class="panel__desc">
+								<h5>Zoe Doe</h5>
+								<p>zoe@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>Frontend Developer</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+
+
+				</tbody>
+			</table>
 		</div>
 	</section>
 	<!-- end of panel -->
