some issues fixed and menu bar icon added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 		<nav class="panel__navigation">
 			<!-- panel nav left side -->
 			<div class="panel__left">
+				<div>
+					<i id="menu-btn" class="fa-solid fa-bars"></i>
+				</div>
 				<div class="panel__search">
 					<i class="fa-solid fa-magnifying-glass"></i>
 					<input type="text" placeholder="Search">
@@ -282,6 +285,112 @@
 						<td class="people_designation">
 							<h5>Software Engineer</h5>
 							<p>Frontend Developer</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+
+					<tr>
+						<td class="panel__people">
+							<img src="./img/1.png" alt="people -source: https://unsplash.com/photos/AJIqZDAUD7A">
+							<div class="panel__desc">
+								<h5>Sarah Doe</h5>
+								<p>sarah@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>Web Developer</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="panel__people">
+							<img src="./img/2.jpg" alt="people -source: https://unsplash.com/photos/7YVZYZeITc8">
+							<div class="panel__desc">
+								<h5>Tolgahan Doe</h5>
+								<p>tolgahan@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>ReactJS Developer</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+					<tr>
+						<td class="panel__people">
+							<img src="./img/3.jpg" alt="people -source: https://unsplash.com/photos/TACdQo62To0">
+							<div class="panel__desc">
+								<h5>Angela Doe</h5>
+								<p>angela@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>Data Visualization</p>
+						</td>
+
+						<td class="panel__status">
+							<p>Active</p>
+						</td>
+
+						<td class="panel__role">
+							<p>Owner</p>
+						</td>
+
+						<td class="panel__edit">
+							<a href="#">Edit</a>
+						</td>
+					</tr>
+
+					<tr>
+						<td class="panel__people">
+							<img src="./img/4.jpg" alt="people -source: https://unsplash.com/photos/sibVwORYqs0">
+							<div class="panel__desc">
+								<h5>Jonathan Doe</h5>
+								<p>jonathan@example.com</p>
+							</div>
+						</td>
+
+						<td class="people_designation">
+							<h5>Software Engineer</h5>
+							<p>Backend Developer</p>
 						</td>
 
 						<td class="panel__status">
