responsive design completed - project completed

--- a/index.html
+++ b/index.html
@@ -413,6 +413,9 @@
 	</section>
 	<!-- end of panel -->
 
+
+	<!-- jQuery 3.6.1 -->
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 </body>
 
 </html>
